# official_genailib_wl

./: .gitignore  ReadME.md  pyproject.toml  requirements.txt
docs/: console.html  genailibrary.html  index.html  robots.txt  search.json  sitemap.xml  testchatconnection.html  wikipedia.html
genailib_rg/: __init__.py  console.py  genailib_rg.py  genailib_rg_sub.py  test_openai_connection.py
genailib_wl_folder/: __init__.py  console.py  genailib_wl_file.py  test_openai_connection.py
notebooks/: console.ipynb  console.qmd  genailibrary.qmd  index.qmd  nbdev.yml  settings.ini  sidebar.yml  testchatconnection.qmd  wikipedia.ipynb
tests/: conftest.py  test_chat_responses.py  test_console.py  test_wikepedia.py
wikiapp/: __init__.py  console.py  wikipedia.py
