[project]
name = "wikiapp"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "SGGmilagro", email = "120662824+SGGmilagro@users.noreply.github.com" },
]
requires-python = ">= 3.10"
dependencies = []

[project.scripts]
wikiapp = "wikiapp.console:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
wikiapp = { path = ".", editable = true }

[tool.pixi.tasks]
program = "python wikiapp/console.py"

[tool.pixi.dependencies]
requests = ">=2.31.0,<2.32"
click = ">=8.1.7,<8.2"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.2.0,<8.3"
pytest-cov = ">=5.0.0,<5.1"
pytest-mock = ">=3.14.0,<3.15"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.py310.dependencies]
click = ">=8.1.3,<8.2"
python = "3.10.*"
requests = ">=2.23.0,<2.33"

[tool.pixi.feature.py311.dependencies]
request = ">=2.83.1,<2.84"
click = ">=8.1.3,<8.2"
python = "3.11.*"

[tool.pixi.feature.lintformat.dependencies]
ruff = ">=0.4.5,<0.5"
pre-commit = ">=3.7.1,<3.8"

[tool.pixi.feature.lintformat.tasks]
lint = "ruff check"
format = "ruff format"

[tool.pixi.feature.typing.dependencies]
mypy = ">=0.812,<1.11"

[tool.pixi.feature.typing.tasks]
typing = "mypy ."

[tool.pixi.environments]
default = { solve-group = "default" } #includes defualut
test = { features = ["test"], solve-group = "default" } #includes default, test
dev = { features = ["test", "lintformat", "typing"], solve-group = "default" }
py310test = { features = [
    "test",
    "py310",
], solve-group = "py310" } # includes default, test, py310
py311test = { features = [
    "test",
    "py311",
], solve-group = "py311" } # includes defalut, test, py311

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/test"

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I", "S", "ANN"]
ignore = [
    "S101",   #don´t include asserts
    "E203",   #don´t complain about whitespace
    "ANN401",
]

mccabe.max-complexity = 10

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["requests", "pytest"]
ignore_missing_imports = true
